--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.49.8"
+    "sass": "^1.49.8",
+    "swiper": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
